[tool.poetry]
name = "WEB_HOMEWORK_11"
version = "1"
description = ""
authors = ["Victor3637 <Victor3637@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^0.1"
pydantic = {extras = ["email"], version = "^2.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
